--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,22 @@
 {
   "compilerOptions": {
-    "types": ["bun-types"],
     "lib": ["esnext"],
     "module": "esnext",
+    "target": "esnext",
     "moduleResolution": "bundler",
+    "moduleDetection": "force",
+    "allowImportingTsExtensions": true,
     "noEmit": true,
+    "composite": true,
     "strict": true,
-    "skipLibCheck": true
+    "downlevelIteration": true,
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "types": [
+      "bun-types" // add Bun global
+    ]
   }
 }
