feat: add docker

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: bun
     env: docker
-    repo: https://github.com/render-examples/bun-docker
+    repo: https://github.com/samjoea/bun-ludo-server.git
     plan: starter
     autoDeploy: false
