--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "name": "bun-ludo-server",
   "module": "index.ts",
   "scripts": {
-    "start": "bun index.js",
-    "build": "bun build ./index.ts --outdir ./dist"
+    "start": "bun ./index.ts",
+    "dev": "bun --hot ./index.ts"
   },
   "devDependencies": {
     "bun-types": "latest"
